# mcmonitor

./: .gitignore  Cargo.toml  README.md  env_example  join_messages.json  leave_messages.json  special_join_messages.json.example  special_leave_messages.json.example
src/: config.rs  error.rs  fetch.rs  main.rs  messages.rs  monitor.rs  telegram.rs
