[package]
name = "mcmonitor"
version = "1.1.1"
edition = "2024"

[dependencies]
rust-mc-status = "2.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
